--- a/css/main.css
+++ b/css/main.css
@@ -23,3 +23,16 @@ a         { color: #00a; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
 
+/* done with reset */
+
+section#content {
+  width: 35em;
+  margin-left: auto;
+  margin-right: auto;
+  text-align:left;
+}
+
+p { font-size: 16px; }
+
+h1 { font-size: 36px; }
+h2 { font-size: 24px; }
