--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,7 @@ html, body { height: 100%; }
 
 body {
   background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
-  font-size: small;
+  font: 16px Helvetica, Arial, sans-serif;
   text-align: center;
 }
 
@@ -32,7 +31,19 @@ section#content {
   text-align:left;
 }
 
-p { font-size: 16px; }
-
 h1 { font-size: 36px; }
 h2 { font-size: 24px; }
+
+
+
+table {
+  border-collapse: collapse;
+}
+
+td, th {
+  border: 1px solid #999;
+  padding: 0.5rem;
+  text-align: left;
+}
+
+
