--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/css/main.css"></link>
+    <link rel="alternate" type="application/rss+xml" title="RSS"
+	  href="http://metaphysics.io/feed.xml">
   </head>
   <body>
     <section id="content">
